--- a/protocols/uniswap-v2/foundry.toml
+++ b/protocols/uniswap-v2/foundry.toml
@@ -3,7 +3,13 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-[fuzz]
-runs = 10000
+[invariant]
+runs = 2000
+depth = 25
+fail_on_revert = false
+call_override = false
+dictionary_weight = 80
+include_storage = true
+include_push_bytes = true
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
